--- a/AndroidFiles/CSV11/app/src/main/res/layout/activity_main.xml
+++ b/AndroidFiles/CSV11/app/src/main/res/layout/activity_main.xml
@@ -14,25 +14,36 @@
         android:gravity="center_horizontal|center_vertical">
 
         <Button
-            android:id="@+id/oneone"
-            android:layout_width="120dp"
+            android:id="@+id/CU"
+            android:layout_width="90dp"
             android:layout_height="50dp"
             android:layout_margin="3dp"
-            android:text="1+1"/>
+            android:text="CU"
+            android:backgroundTint="#12aede"/>
 
         <Button
-            android:id="@+id/twoone"
-            android:layout_width="120dp"
+            android:id="@+id/SE"
+            android:layout_width="90dp"
             android:layout_height="50dp"
             android:layout_margin="3dp"
-            android:text="2+1"/>
+            android:text="7/11"
+            android:backgroundTint="#12aede"/>
 
         <Button
-            android:id="@+id/map"
-            android:layout_width="120dp"
+            android:id="@+id/GS"
+            android:layout_width="90dp"
             android:layout_height="50dp"
             android:layout_margin="3dp"
-            android:text="주변편의점"/>
+            android:text="GS25"
+            android:backgroundTint="#12aede"/>
+
+        <Button
+            android:id="@+id/EM"
+            android:layout_width="90dp"
+            android:layout_height="50dp"
+            android:layout_margin="3dp"
+            android:text="E24"
+            android:backgroundTint="#12aede"/>
     </LinearLayout>
 
     <LinearLayout
@@ -48,14 +59,15 @@
             android:layout_margin="3dp"
             android:ems="10"
             android:inputType="textPersonName"
-            android:hint="상품명을 검색하세요" />
+            android:hint="상품명을 입력하세요"/>
 
         <Button
             android:id="@+id/find"
             android:layout_width="100dp"
             android:layout_height="50dp"
             android:layout_margin="3dp"
-            android:text="검색"/>
+            android:text="검색"
+            android:backgroundTint="#12aede" />
 
     </LinearLayout>
 
